--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>repost</title>
+    <title>ProjecTraffic</title>
+    <link rel="shortcut icon" type="image/png" href="http://www.cashadvance6online.com/data/archive/img/4198715617.png" />
   </head>
   <body>
     <div id="app"></div>
